[project]
name = "включения и генераторы"
version = "0.1.0"
description = ""
authors = [
    {name = "AV_Geyer",email = "arbitr705@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
packages = [{include = "package_name", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
\.git
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 5  # Вертикальный формат с 1 импортом на строку
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["src"]
combine_as_imports = true
ensure_newline_before_comments = true

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv/'
